@@ -1,3 +1,14 @@
+2006-04-06  Adam Jackson  <ajax@freedesktop.org>
+
+	* configure.ac:
+	* src/cyrix.h:
+	* src/cyrix_accel.c:
+	* src/cyrix_bank.c:
+	* src/cyrix_driver.c:
+	* src/cyrix_helper.c:
+	* src/cyrix_shadow.c:
+	Unlibcwrap.  Bump server version requirement.  Bump to 1.1.0.
+
 2005-12-20  Kevin E. Martin  <kem-at-freedesktop-dot-org>
 
 	* configure.ac:
